--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/72707
+	* g++.dg/warn/Wshadow-12.C: New test.
+
 2016-12-21  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR rtl-optimization/78580
