--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/78817
+	* vec.h (vec<T, va_heap, vl_ptr>::safe_grow_cleared): Revert
+	2016-12-15 change.
+
 2016-12-21  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR rtl-optimization/78580
